--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -1,6 +1,9 @@
 ---
+import { Image } from '@astrojs/image/components'
+import logo from '../images/logo.svg'
 import '@fontsource/dm-sans/600.css'
 import '@fontsource/dm-sans/400.css'
+
 interface Props {
   title: string
 }
@@ -18,10 +21,14 @@ const { title } = Astro.props
     <meta name='generator' content={Astro.generator} />
     <title>{title}</title>
   </head>
+
   <body class='bg-background text-text leading-8'>
     <div
-      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_640px)_minmax(16px,_1fr)]'
+      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)]'
     >
+      <a href='/' class='[grid-column:_2] pt-10'>
+        <Image alt='' src={logo} width={32} height={32} />
+      </a>
       <slot />
     </div>
   </body>
