--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,9 @@
 ---
+import { Image } from '@astrojs/image/components'
+import logo from '../images/logo.svg'
 import Layout from '../layouts/Layout.astro'
 import Section from '../components/Section.astro'
 import Project from '../components/Project.astro'
-import CornerGraphic from '../images/CornerGraphic.astro'
 import nemesisAiThumbnail from '../images/nemesis-ai/thumbnail.jpg'
 import mealAppThumbnail from '../images/meal-app/thumbnail.jpg'
 import vrTacticsThumbnail from '../images/vr-tactics/thumbnail.jpg'
@@ -10,36 +11,36 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
 ---
 
 <Layout title='Laura Cleveland'>
-  <div class='absolute right-0 w-64 sm:w-80 md:w-96 opacity-50'>
-    <CornerGraphic />
-  </div>
   <div
-    class='pt-56 pb-24 bg-gradient-to-br from-gradient-start to-gradient-end'
+    class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_640px)_minmax(16px,_1fr)] col-span-full bg-gradient-to-tr from-[#2c5666] to-[#4e557a] bg-origin-padding'
   >
-    <Section>
-      <h1 class='mb-20 text-3xl xs:text-4xl sm:text-5xl font-semibold'>
-        <span class='block text-accent-1'>Laura</span>
-        <span class='block text-accent-2'>Cleveland</span>
+    <div class='[grid-column:_2] pt-4 xs:pt-6 md:pt-10 pb-20 xs:pb-24 sm:pb-48'>
+      <a href='/'>
+        <Image alt='' src={logo} width={32} height={32} />
+      </a>
+      <h1
+        class='mt-32 sm:mt-64 mb-20 text-3xl xs:text-4xl sm:text-5xl font-semibold'
+      >
+        <span class='block text-[#ffe1a6]'>Laura</span>
+        <span class='block text-[#ffad8f]'>Cleveland</span>
       </h1>
       <p class='max-w-sm'>
         Eu enim proident incididunt consectetur cillum laboris qui sunt.
       </p>
-    </Section>
+    </div>
   </div>
 
-  <div class='bg-background-dark'>
-    <Section>
-      <p class='mb-10 max-w-lg'>
-        Voluptate est labore voluptate est ut esse occaecat deserunt excepteur
-        laboris. Nostrud nulla eu laboris veniam adipisicing fugiat pariatur est
-        voluptate consequat occaecat nostrud aliqua.
-      </p>
-      <p class='max-w-lg'>
-        Dolor dolor veniam labore non aliquip ipsum sit minim anim id. Aliqua
-        fugiat mollit aliqua officia ullamco aute officia quis ea culpa.
-      </p>
-    </Section>
-  </div>
+  <Section>
+    <p class='mb-16 max-w-lg'>
+      Voluptate est labore voluptate est ut esse occaecat deserunt excepteur
+      laboris. Nostrud nulla eu laboris veniam adipisicing fugiat pariatur est
+      voluptate consequat occaecat nostrud aliqua.
+    </p>
+    <p class='max-w-lg'>
+      Dolor dolor veniam labore non aliquip ipsum sit minim anim id. Aliqua
+      fugiat mollit aliqua officia ullamco aute officia quis ea culpa.
+    </p>
+  </Section>
 
   <Section>
     <h2 class='mb-10 text-2xl font-bold'>My Skills</h2>
@@ -51,20 +52,17 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
 
     <!-- I know there is a way to do thirds for these that has better balance -->
     <ul class='flex flex-wrap text-sm font-medium uppercase'>
-      <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-100'>Javascript</li>
-      <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-200'>React</li>
-      <li
-        class='basis-1/2 xs:basis-1/3 py-3 text-orange-200 xs:text-orange-300'
-      >
-        SQL
-      </li>
-      <li
-        class='basis-1/2 xs:basis-1/3 py-3 text-orange-300 xs:text-orange-200'
-      >
-        Faucibus
-      </li>
-      <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-300'>Arcu turpis</li>
-      <li class='basis-1/2 xs:basis-1/3 py-3 text-orange-400'>Sagittis</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Javascript</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>React</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>SQL</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Typescript</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Python</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>HTML/CSS</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Tailwind CSS</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Node.js</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Gatsby JS</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>GraphQL</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>Prisma</li>
     </ul>
   </Section>
 
@@ -116,7 +114,7 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
     >
   </Section>
 
-  <div class='flex justify-end mt-12 mb-8 pr-10'>
+  <div class='col-span-full flex justify-end mt-12 mb-8 pr-10'>
     <a href='#' class='ml-6'>github</a>
     <a href='#' class='ml-6'>twitter</a>
     <a href='#' class='ml-6'>linkedin</a>
