--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -1,7 +1,7 @@
 ---
 import Section from '../components/Section.astro'
 import Layout from '../layouts/Layout.astro'
-import gif from '/creepybug.mp4'
+import gif from '/creepyBug.mp4'
 ---
 
 <Layout title='VR Tactics | Laura Cleveland'>
