--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,37 +18,36 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
       <a href='/'>
         <Image alt='' src={logo} width={32} height={32} />
       </a>
-      <h1
-        class='mt-32 sm:mt-64 mb-20 text-3xl xs:text-4xl sm:text-5xl font-semibold'
-      >
+      <p class='mt-32 sm:mt-64'>Hello, I'm</p>
+
+      <h1 class='mb-20 text-3xl xs:text-4xl sm:text-5xl font-semibold'>
         <span class='block text-[#ffe1a6]'>Laura</span>
         <span class='block text-[#ffad8f]'>Cleveland</span>
       </h1>
-      <p class='max-w-sm'>
-        Eu enim proident incididunt consectetur cillum laboris qui sunt.
-      </p>
+      <p class='max-w-sm'>I'm a self-taught full stack web developer who</p>
     </div>
   </div>
 
   <Section>
-    <p class='mb-16 max-w-lg'>
-      Voluptate est labore voluptate est ut esse occaecat deserunt excepteur
-      laboris. Nostrud nulla eu laboris veniam adipisicing fugiat pariatur est
-      voluptate consequat occaecat nostrud aliqua.
+    <p class='mb-12 max-w-lg'>
+      I first felt the excitement of programming when I was 12 and hunkered down
+      with a copy of Sams Teach Yourself HTML 4 in 24 Hours and made my first
+      "Laura's web page". It was bright yellow and offensively garish, but it
+      opened a door for me into design. After that I was obsessed with Photoshop
+      and had dreams of becoming a graphic designer that didn't pan out. It
+      wasn't until my husband went to school for computer science that I got
+      into programming again. That's when things clicked for me and I was hooked
+      for good.
     </p>
     <p class='max-w-lg'>
-      Dolor dolor veniam labore non aliquip ipsum sit minim anim id. Aliqua
-      fugiat mollit aliqua officia ullamco aute officia quis ea culpa.
+      Since then, for over a decade I have been exploring different areas of
+      programming and honing my skills. I love continuously learning and finding
+      ways to adapt and improve, and stay up to date with new tech.
     </p>
   </Section>
 
   <Section>
     <h2 class='mb-10 text-2xl font-bold'>My Skills</h2>
-    <p class='mb-10 max-w-lg'>
-      Nisi proident consectetur adipisicing fugiat culpa veniam laboris. Quis
-      magna id est sit nisi officia nisi duis tempor amet anim cupidatat
-      reprehenderit. Nisi eu amet mollit ad dolore excepteur sunt qui.
-    </p>
 
     <!-- I know there is a way to do thirds for these that has better balance -->
     <ul class='flex flex-wrap text-sm font-medium uppercase'>
@@ -59,6 +58,7 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
       <li class='basis-1/2 xs:basis-1/3 py-3'>Python</li>
       <li class='basis-1/2 xs:basis-1/3 py-3'>HTML/CSS</li>
       <li class='basis-1/2 xs:basis-1/3 py-3'>Tailwind CSS</li>
+      <li class='basis-1/2 xs:basis-1/3 py-3'>styled-components</li>
       <li class='basis-1/2 xs:basis-1/3 py-3'>Node.js</li>
       <li class='basis-1/2 xs:basis-1/3 py-3'>Gatsby JS</li>
       <li class='basis-1/2 xs:basis-1/3 py-3'>GraphQL</li>
@@ -69,9 +69,9 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
   <Section>
     <h2 class='mb-6 text-2xl font-bold'>Featured Projects</h2>
     <p class='mb-16 max-w-lg'>
-      Nulla do nisi ipsum duis ut qui aliquip consectetur veniam dolor. Sunt
-      incididunt est esse mollit magna consequat exercitation aute velit
-      incididunt.
+      I try to pursue projects that are complex enough to sufficiently challenge
+      my abilities and that will lead to really worthwhile learning. I'm
+      motivated by opportunities to solve real world problems and
     </p>
 
     <Project
