--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Project from '../components/Project.astro'
 import nemesisAiThumbnail from '../images/nemesis-ai/thumbnail.jpg'
 import mealAppThumbnail from '../images/meal-app/thumbnail.jpg'
 import vrTacticsThumbnail from '../images/vr-tactics/thumbnail.jpg'
-import thumbnail from '../images/terrain-blog/thumbnail.png'
+import thumbnail from '../images/terrain-blog/thumbnail.jpg'
 ---
 
 <Layout title='Laura Cleveland'>
@@ -69,9 +69,9 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
   <Section>
     <h2 class='mb-6 text-2xl font-bold'>Featured Projects</h2>
     <p class='mb-16 max-w-lg'>
-      I try to pursue projects that are complex enough to sufficiently challenge
-      my abilities and that will lead to really worthwhile learning. I'm
-      motivated by opportunities to solve real world problems and
+      I like to pursue projects that are complex enough to sufficiently
+      challenge my abilities and that will lead to really worthwhile learning.
+      I'm motivated by opportunities to solve real world problems and
     </p>
 
     <Project
@@ -105,13 +105,13 @@ import thumbnail from '../images/terrain-blog/thumbnail.png'
 
   <Section>
     <h2 class='mb-6 text-2xl font-bold'>Get in touch</h2>
-    <p class='mb-6 max-w-md'>
+    <!-- <p class='mb-6 max-w-md'>
       Anim Lorem et esse sunt duis commodo culpa exercitation est pariatur Lorem
       qui mollit adipisicing.
+    </p> -->
+    <p class='inline-block text-sm font-bold border-b border-b-text'>
+      laurakcleve@gmail.com
     </p>
-    <a href='#' class='text-sm font-bold uppercase border-b border-b-text'
-      >Nunc vel gravida nisl</a
-    >
   </Section>
 
   <div class='col-span-full flex justify-end mt-12 mb-8 pr-10'>
