Change some home page content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,10 +39,16 @@ import thumbnail from '../images/terrain-blog/thumbnail.jpg'
       into programming again. That's when things clicked for me and I was hooked
       for good.
     </p>
-    <p class='max-w-lg'>
+    <p class='mb-12 max-w-lg'>
       Since then, for over a decade I have been exploring different areas of
       programming and honing my skills. I love continuously learning and finding
       ways to adapt and improve, and stay up to date with new tech.
+    </p>
+    <p class='max-w-lg'>
+      I've gotten really excited about AI and all the brand new possibilities,
+      on both the technical and the creative side. Apart from coding, I enjoy
+      tabletop gaming, miniature painting, video games, and reading sci-fi and
+      fantasy novels.
     </p>
   </Section>
 
